src/App.css
body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: "Gill Sans Extrabold", sans-serif;
  background-image: url("../public/desk.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  line-height: 1.2;
  color: #141414;
  backdrop-filter: blur(12px);
  width: 100vw;
  height: 100vh;
}

ol,
ul {
  padding-left: 0;
  list-style: none;
}

h1 {
  font-size: 36px;
}

h2 {
  font-size: 22px;
  color: #808080;
}
h3 {
  font-size: 16px;
}

.App {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.App-header {
  display: flex;
  justify-content: end;
  flex-direction: row;
  width: 100%;
  .social {
    text-align: right;
    display: flex;
    margin-top: 100px;
    padding: 20px;
    width: max-content;
    img,
    svg {
      height: 25px;
      width: 25px;
      margin: -5px 20px;
    }

    @media screen and (max-width: 600px) {
      display: none;
    }
  }

  .logo {
    padding: 40px 50px 20px;
    text-align: right;
    img {
      width: 200px;

      @media screen and (max-width: 600px) {
        width: 100%;
      }
    }

    @media screen and (max-width: 600px) {
      width: 100%;
    }
  }
}

.App-content {
  display: flex;
  flex-direction: column;
  width: 90%;
  margin: auto;
  align-items: end;
  min-height: 60vh;

  .skill-chart {
    @media screen and (max-width: 600px) {
      display: none !important;
    }
    cursor: pointer;
  }
  .legend2 {
    @media screen and (max-width: 600px) {
      display: none !important;
    }
  }

  .MuiButtonGroup-root,
  .MuiInputBase-root,
  .MuiTextField-root {
    margin: 10px 0;
    width: 430px;
    button {
      padding: 15px;
      border-color: #808080 !important;
      background-color: transparent !important;
      color: #808080 !important;
      &:first-child {
        width: 100%;
      }
      font-size: 20px;
      font-weight: 600;
    }
    @media screen and (max-width: 600px) {
      margin: auto;
    }
  }
}

footer {
  color: #808080;
  font-size: 12px;
  text-align: right;
  position: fixed;
  bottom: 5px;
  width: 95%;
  margin: 0 auto;
}

a,
a:visited,
a:hover {
  text-decoration: none;
  font-weight: normal;
  color: #808080;
}

a:focus,
a:hover {
  text-decoration: underline;
}

a.collapse {
  font-size: small;
  color: #e0e0e0;
}

.apod,
.epic,
.weather {
  h2,
  h3,
  h4 {
    text-align: center;
    width: 100%;
    color: gray;
    margin: 10px 0;
  }
  img {
    width: 100%;
    height: auto;
    border: none;
    margin-bottom: 10px;
  }

  iframe,
  video,
  embed {
    width: 100%;
    height: auto;
    border: none;
  }

  .apod-nav {
    width: 100%;
    height: 90%;
    display: flex;
    justify-content: space-between;
    position: absolute;
    left: 0;

    .next {
      float: right;
    }

    .prev,
    .next {
      cursor: pointer;
      width: 100px;
      text-align: center;
      height: 100%;
      color: transparent;
    }
  }

  .close-btn {
    float: right;
    padding: 10px;
    text-align: center;
    button {
      width: fit-content;
      min-width: fit-content;
    }

    a {
      font-size: 0.9em;
    }
  }
}

.weather {
  margin-top: 20px;
}

.epic {
  margin: 5px auto;
  text-align: center;
}
.ReactModal__Overlay,
.ReactModal__Overlay--after-open {
  background-color: rgba(0, 0, 0, 0.9) !important;
  filter: alpha(opacity=60);
}
.ReactModal__Content,
.ReactModal__Content--after-open {
  padding: 5px 5px 15px !important;
}
.MuiAutocomplete-root {
  * {
    cursor: pointer;
  }
}
.event {
  margin: auto;
  margin-top: 20px;
  max-width: 700px;
}

.map-container {
  height: 80%;
  min-height: 600px;
  cursor: pointer;
}

.Mui-expanded {
  margin: 0 !important;
  small {
    float: right;
  }
}
.MuiSwitch-root {
  padding: 14px !important;
  .MuiSwitch-switchBase {
    * {
      margin-top: -2px;
    }
    &.Mui-checked {
      color: #4f4e4e !important;
    }
  }
}

.map-overlay-inner {
  background-color: #fff;
  padding: 10px 20px;
  border-radius: 3px;
  color: "#000";
  text-align: "left";
  &.Severe {
    border: rgb(178, 24, 43) 8px solid;
  }
  &.Moderate {
    border: rgb(239, 138, 98) 8px solid;
  }
  &.Unknown {
    border: rgb(253, 219, 199) 8px solid;
  }
  display: block;
  h3,
  h4 {
    margin: 5px 0;
  }
}

.map-overlay {
  position: fixed;
  left: -5px;
  bottom: 45px;
  width: 400px;
  height: fit-content;
  padding: 10px;
  color: #1a2224;
  font-size: 14px;
  opacity: 0.8;
  @media screen and (max-width: 600px) {
    width: auto;
  }
}

